# stm32_test

./: CMakeLists.txt  ReadMe.md  platformio.ini
include/: errorState.h  glob.h  rcc.h  rcc_cfg.h  stdTypes.h
include/HAL/7_Seg/: seg_cfg.h  seg_display.h
include/HAL/C_LCD/: lcd.h
include/HAL/HSerial/: hserial.h
include/HAL/LED/: led.h  led_cfg.h
include/HAL/Push_button/: btn.h  btn_cfg.h
include/HAL/keypad/: keypad.h
include/HAL/led_matrix/: matrix.h
include/MCAL/DMA/: dma.h  dma_regs.h
include/MCAL/GPIO/: gpio.h
include/MCAL/NVIC/: nvic.h
include/MCAL/RCC/: rcc.h
include/MCAL/systick/: systick.h
include/MCAL/uart/: uart.h
include/service/scheduler/: sched.h
lib/: rcc.c
src/: README.md  REG_DEF.h  main.c  rcc.c
src/HAL/7_Seg/: seg_cfg.c  seg_display.c
src/HAL/C_LCD/: lcd.c
src/HAL/HSerial/: hserial.c
src/HAL/LED/: LED_configuration.c  LED_configuration.h  LED_interface.h  LED_private.h  LED_prog.c  led.c  led_cfg.c
src/HAL/Push_button/: btn.c  btn_cfg.c
src/HAL/SWITCH/: SWITCH_configuration.c  SWITCH_configuration.h  SWITCH_interface.h  SWITCH_private.h  SWITCH_prog.c
src/HAL/keypad/: keypad.c
src/HAL/led_matrix/: matrix.cpp
src/MCAL/DMA/: dma.c
src/MCAL/GPIO/: GPIO_config.c  GPIO_config.h  GPIO_interface.h  GPIO_private.h  GPIO_prog.c  gpio.c
src/MCAL/NVIC/: nvic.c
src/MCAL/RCC/: RCC_config.c  RCC_config.h  RCC_interface.h  RCC_private.h  RCC_prog.c  rcc.c
src/MCAL/systick/: systick.c
src/MCAL/uart/: uart.c
src/service/: sched.c
src/service/scheduler/: sched.c
